// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with invalid password error 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "Please enter a password containing at least 8 characters, one of the following special characters, $@!%*#?&, one letter, and one number.",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "test",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no match password 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "testPassword1!",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "This password does not match your password above.",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "testPassword1!",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no new password error 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "Please enter your new password.",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with no password error 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "Please enter your password.",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with password not found 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "This password does not match our records.",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "test",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly and calls handleInputChange, with undefined error 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "Please try your request again. If unsuccessful on subsequent attempts, please contact customer service.",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount 1`] = `
<FormChangePassword
  currentFormBool={false}
  handleInputChange={[Function]}
  headerWidthBufferRight={10}
  heightRef={[MockFunction]}
  inputs={
    Object {
      "changePasswordNewPassword": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordNewPassword2": Object {
        "errorMessage": "",
        "id": "changePasswordNewPassword2",
        "parentId": "changePasswordForm",
        "value": "",
      },
      "changePasswordOldPassword": Object {
        "errorMessage": "",
        "id": "changePasswordOldPassword",
        "parentId": "changePasswordForm",
        "value": "",
      },
    }
  }
  mediaWidth={874}
  rowHeight={60}
  rowHeightBuffer={18}
  rowWidthIndent={10}
/>
`;

exports[`Containers PageInternal PageBodyContainerAccount Forms FormContainerChangePassword shallow renders correctly, with loading indicator 1`] = `
<FlexColumn
  alignItems={null}
  alignSelf={null}
  borderColorType="border"
  borderRadius={null}
  borderStyle={null}
  borderWidth={null}
  boxSizing={null}
  color={Object {}}
  display={null}
  flex={null}
  flexWrap={null}
  height="0px"
  justifyContent={null}
  margin={null}
  mediaWidth={null}
  minHeight={null}
  minWidth={null}
  overflowX={null}
  overflowY={null}
  padding={null}
  position={null}
  responsiveAlignSecurities={null}
  responsiveJustifyContent={null}
  responsiveMargin={null}
  responsivePadding={null}
  responsivePosition={null}
  responsiveWidth={null}
  separator={false}
  themeColor="primary"
  width="100%"
>
  <BeatLoader
    color="#7367e6"
    loading={true}
    margin="2px"
    size="15px"
  />
</FlexColumn>
`;
